maze.shortestpath.ShortestPathMaze.scala.error
Erreur de compilation :
ShortestPathMaze:31: error: value ! is not a member of Int
      if (x!0 && !aMurOuest(x,y))
           ^ShortestPathMaze:33: error: value ! is not a member of Int
      if (x!11 && !aMurOuest(x+1,y))
           ^ShortestPathMaze:35: error: value ! is not a member of Int
      if (y!11 && !aMurNord(x,y+1))
           ^ShortestPathMaze:40: error: not found: value x
    setIndication(x,y,N+1)
                  ^ShortestPathMaze:40: error: not found: value y
    setIndication(x,y,N+1)
                    ^ShortestPathMaze:42: error: not found: value x
    setIndication(x,y,S+1)
                  ^ShortestPathMaze:42: error: not found: value y
    setIndication(x,y,S+1)
                    ^ShortestPathMaze:44: error: not found: value x
    setIndication(x,y,E+1)
                  ^ShortestPathMaze:44: error: not found: value y
    setIndication(x,y,E+1)
                    ^ShortestPathMaze:46: error: not found: value x
    setIndication(x,y,W+1)
                  ^ShortestPathMaze:46: error: not found: value y
    setIndication(x,y,W+1)
                    ^